--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-color: #b0b0b0; /* Light gray background */
+    background-color: #d3d3d3; /* Light gray background */
     color: #444; /* Dark gray font for general text */
 }
 
