--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
     margin: 30px auto;
     padding: 25px;
     text-align: left;
-    background-color: white;
+    background-color: #d3d3d3;
     color: #444; /* Ensuring all content text is dark gray */
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
