--- a/style.css
+++ b/style.css
@@ -54,8 +54,13 @@ header {
 }
 
 /* Projects Section */
+
 .projects {
-    text-align: center;
+    text-align: left; /* Aligns project title to the left */
+}
+
+.projects h2 {
+    margin-left: 10px; /* Adds a slight margin to align with the rest of the content */
 }
 
 .project-grid {
